--- a/index.html
+++ b/index.html
@@ -6,11 +6,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./src//css/all.min.css">
+    <link rel="stylesheet" href="./src//css/bootstrap.min.css">
+    <link rel="stylesheet" href="./src//css/fancybox.min.css">
+    <link rel="stylesheet" href="./src//css/font-awesome.min.css">
+    <link rel="stylesheet" href="./src//css/style.css">
+    <link rel="stylesheet" href="./src//css/swiper.min.css">
     <title>nulloverflow</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- jQuery js -->
+    <script src="js/jquery.min.js"></script>
+    <!-- swup js -->
+    <script src="js/swup.min.js"></script>
+    <!-- swiper js -->
+    <script src="js/swiper.min.js"></script>
+    <!-- fancybox js -->
+    <script src="js/fancybox.min.js"></script>
+    <!-- gsap js -->
+    <script src="js/gsap.min.js"></script>
+    <!-- scroll smoother -->
+    <script src="js/smooth-scroll.js"></script>
+    <!-- scroll trigger js -->
+    <script src="js/ScrollTrigger.min.js"></script>
+    <!-- scroll to js -->
+    <script src="js/ScrollTo.min.js"></script>
+    <!-- ashley js -->
+    <script src="js/main.js"></script>
   </body>
 </html>
