--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="./src//css/all.min.css">
-    <link rel="stylesheet" href="./src//css/bootstrap.min.css">
-    <link rel="stylesheet" href="./src//css/fancybox.min.css">
-    <link rel="stylesheet" href="./src//css/font-awesome.min.css">
-    <link rel="stylesheet" href="./src//css/style.css">
-    <link rel="stylesheet" href="./src//css/swiper.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/fancybox.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/swiper.min.css">
     <title>nulloverflow</title>
   </head>
   <body>
