prod browser issue fix

--- a/index.html
+++ b/index.html
@@ -6,35 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/fancybox.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-grid.css">
+    <link rel="stylesheet" href="/css/fancybox.min.css">
+    <link rel="stylesheet" href="/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/swiper.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <title>∅overflow</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-    <!-- jQuery js -->
-    <script src="js/jquery.min.js"></script>
-    <!-- swup js -->
-    <script src="js/swup.min.js"></script>
-    <!-- swiper js -->
-    <script src="js/swiper.min.js"></script>
-    <!-- fancybox js -->
-    <script src="js/fancybox.min.js"></script>
-    <!-- gsap js -->
-    <script src="js/gsap.min.js"></script>
-    <!-- scroll smoother -->
-    <script src="js/smooth-scroll.js"></script>
+    <!-- Safari compatibility fix - MUST load FIRST -->
+    <script src="/js/safari-fix.js"></script>
+    <!-- jQuery js - Load before React -->
+    <script src="/js/jquery.min.js"></script>
+    <!-- gsap js - Load before React -->
+    <script src="/js/gsap.min.js"></script>
     <!-- scroll trigger js -->
-    <script src="js/ScrollTrigger.min.js"></script>
+    <script src="/js/ScrollTrigger.min.js"></script>
     <!-- scroll to js -->
-    <script src="js/ScrollTo.min.js"></script>
-    <!-- ashley js -->
-    <script src="js/main.js"></script>
+    <script src="/js/ScrollTo.min.js"></script>
+    <!-- scroll smoother -->
+    <script src="/js/smooth-scroll.js"></script>
+    <!-- swup js -->
+    <script src="/js/swup.min.js"></script>
+    <!-- swiper js -->
+    <script src="/js/swiper.min.js"></script>
+    <!-- fancybox js -->
+    <script src="/js/fancybox.min.js"></script>
+    <!-- React module - Load after libraries -->
+    <script type="module" src="/src/main.jsx"></script>
+    <!-- ashley js - Load last -->
+    <script src="/js/main.js"></script>
   </body>
 </html>
